removing unnecessary bits